# QIHC

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: BBH_HF.md  LITERATURE_GAP.md  NSFC_EVIDENCE_RUNBOOK.md  RELEASE_v0.2.0.md  VCI_GUIDE.md
experiments/: CR_PAPER_PROTOCOL.md  download_bbh_hf.py  plot_qihc_vci_architecture.py  run_moe_poc.py  run_pre_submission.sh  run_sampler_benchmark.py  run_sampler_scaling.py  run_vci_bbh.py  run_vci_handoff.py  run_vci_pareto.py  run_vci_reasoning.py
experiments/nsfc_evidence/: THREE_LAW_README.md  cn_mirror_env.sh  common.py  download_model_hf.py  logging_utils.py  plot_evidence_report.py  run_case_a_cr_subset.py  run_case_b_dual_synthetic.py  run_case_c_compute_budget.py  run_case_d_cr_by_task.py  run_case_e_cr_bundled_full.py  run_case_f_vci_ablation.py  run_case_g_constrained_bbh.py  run_case_h_model_compare.py  run_cr_bbh.py  run_dual_4090.sh  run_dual_evidence.py  run_dual_pro6000.sh  run_evidence_suite.py  run_f_trajectories.py  run_ne1_division.py  run_ne2_contraction.py  run_ne3_refresh.py  run_ne4_stale_field.py  run_ne5_snr_lambda.py  run_ne6_trust_gate.py  run_ne7_trust_proxy.py  run_ne8_pareto.py  run_ne9_free_energy.py  run_offline_h200.sh  run_on_server.sh  run_on_server_p012.sh  run_on_server_three_law.sh  run_online_4090.sh  run_pro6000_quick_2h.sh  (+4 more)
notebooks/: demo_Ising.ipynb  demo_SC.ipynb
qihc/: __init__.py
qihcdoc/: Pro6000单卡2小时快速实验.md  README.md  双4090逐步运行手册.md  双机实验流程_4090与H200.md
tests/: test_bbh.py  test_orchestrator.py  test_samplers.py  test_vci.py
(+104 files in other folders)
