[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "qihc"
version = "0.2.0"
description = "Quantum-Inspired Intelligence Heterogeneous Computing — p-bit Ising simulator"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "QIHC Contributors" }]
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "networkx>=3.1",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
llm = ["torch>=2.0", "transformers>=4.36", "accelerate>=0.25"]

[tool.setuptools.packages.find]
where = ["."]
include = ["qihc*"]

[tool.setuptools.package-data]
"qihc.stochastic" = ["data/*.parquet"]
"qihc.data" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
